# Agent-Team

./: README.md  pyproject.toml
agent_team/: __init__.py  base.py  integrations.py  llm_policy.py  objectives.py  orchestrator.py  registry.py
agent_team/a2a/: models.py
docs/: default-memory-loading.md  ecosystem-integration.md
teams/cloud-architect/: README.md  pyproject.toml  team.yaml
teams/cloud-architect/docs/: overview.md
teams/cloud-architect/src/cloud_architect_agent_team/: models.py  orchestrator.py  smoke_test.py
tests/: test_agent_team_runtime.py
